--- a/index.html
+++ b/index.html
@@ -28,19 +28,145 @@
     </header>
     <section>
         <div class="container">
-            <div class="macth">
-                <div class="match_buttons">
-                    <a href="">Upcomming Match</a>
+            <div class="blogs">
+                <div class="flex match_buttons">
+                    <a href="">Upcoming Watch</a>
                     <a href="">All Group</a>
-                    <a href="">Blog</a>
+                    <a class="def_button" href="">Blog</a>
                 </div>
-                <div>
-                    <div><img src="" alt=""></div>
-                    <div class="watch_text"></div>
+                <div class="main_blog">
+                    <div class="blog">
+                        <div class="blog_img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="watch_text">
+                            <a href="">Transfer</a>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="watch_comment">
+                                <span><i class="fa-regular fa-clock"></i>&ThinSpace; 10h</span>
+                                <span><i class="fa-regular fa-comment-dots"></i>&ThinSpace; 39</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog_img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="watch_text">
+                            <a href="">Transfer</a>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="watch_comment">
+                                <span><i class="fa-regular fa-clock"></i>&ThinSpace; 10h</span>
+                                <span><i class="fa-regular fa-comment-dots"></i>&ThinSpace; 39</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog_img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="watch_text">
+                            <a href="">Transfer</a>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="watch_comment">
+                                <span><i class="fa-regular fa-clock"></i>&ThinSpace; 10h</span>
+                                <span><i class="fa-regular fa-comment-dots"></i>&ThinSpace; 39</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog_img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="watch_text">
+                            <a href="">Transfer</a>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="watch_comment">
+                                <span><i class="fa-regular fa-clock"></i>&ThinSpace; 10h</span>
+                                <span><i class="fa-regular fa-comment-dots"></i>&ThinSpace; 39</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog_img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="watch_text">
+                            <a href="">Transfer</a>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="watch_comment">
+                                <span><i class="fa-regular fa-clock"></i>&ThinSpace; 10h</span>
+                                <span><i class="fa-regular fa-comment-dots"></i>&ThinSpace; 39</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog_img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="watch_text">
+                            <a href="">Transfer</a>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="watch_comment">
+                                <span><i class="fa-regular fa-clock"></i>&ThinSpace; 10h</span>
+                                <span><i class="fa-regular fa-comment-dots"></i>&ThinSpace; 39</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog_img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="watch_text">
+                            <a href="">Transfer</a>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="watch_comment">
+                                <span><i class="fa-regular fa-clock"></i>&ThinSpace; 10h</span>
+                                <span><i class="fa-regular fa-comment-dots"></i>&ThinSpace; 39</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog_img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="watch_text">
+                            <a href="">Transfer</a>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="watch_comment">
+                                <span><i class="fa-regular fa-clock"></i>&ThinSpace; 10h</span>
+                                <span><i class="fa-regular fa-comment-dots"></i>&ThinSpace; 39</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog_img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="watch_text">
+                            <a href="">Transfer</a>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="watch_comment">
+                                <span><i class="fa-regular fa-clock"></i>&ThinSpace; 10h</span>
+                                <span><i class="fa-regular fa-comment-dots"></i>&ThinSpace; 39</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <footer>
+        <h2>Goal</h2>
+        <div class="flex footer_links">
+            <a href="">Contect Us</a>
+            <a href="">Terms of Service</a>
+            <a href="">Privacy Policy</a>
+            <a href="">Privacy Satting</a>
+            <a href="">Goal App</a>
+            <a href="">Goal Live</a>
+        </div>
+    </footer>
 </body>
 
 </html>
