--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
                 </div>
             </div>
         </div>
+        <div class="view_btn">
+            <button>View All</button>
+        </div>
     </section>
     <footer>
         <h2>Goal</h2>
