--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="blog">
+                    <div class="blog last">
                         <div class="blog_img">
                             <img src="images/Blog Image.png" alt="">
                         </div>
