--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
         </div>
         <div class="view_btn">
-            <button>View All</button>
+            <a href="#">Viwe All</a>
         </div>
     </section>
     <footer>
