--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <!-------------------------- 
+    header section starts here 
+    --------------------------->
     <header>
         <div class="container">
             <div class="flex main_head_container">
@@ -18,7 +21,10 @@
                     <h1>The Greatest show on the earth</h1>
                     <p>Welcome to the world's greatest show on, the World FIFA Cup.Welcome to Qatar to watch the world's
                         most popular game World FIFA cup. We are here to serve you</p>
-                    <a href="#">Watch Live &ThinSpace;<i class="fa-solid fa-angle-right"></i></a>
+                        <div class="top_btm">
+                            <button class="button">Watch Live&ThinSpace; <i class="fa-solid fa-angle-right"></i>&ThinSpace;<i class="fa-solid fa-video"></i></button>
+                        </div>
+                    <!-- <a href="#">Watch Live&ThinSpace; <i class="fa-solid fa-video"></i> &ThinSpace;<i class="fa-solid fa-angle-right"></i></a> -->
                 </div>
                 <div class="head_img">
                     <img src="images/Banner.png" alt="">
@@ -26,6 +32,9 @@
             </div>
         </div>
     </header>
+    <!-------------------------- 
+    blog section starts here 
+    --------------------------->
     <section>
         <div class="container">
             <div class="blogs">
@@ -159,6 +168,9 @@
             <a href="#">Viwe All</a>
         </div>
     </section>
+    <!-------------------------- 
+    footer section starts here 
+    --------------------------->
     <footer>
         <h2>Goal</h2>
         <div class="flex footer_links">
