--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             <div class="flex main_head_container">
                 <div class="header_text">
                     <h1>The Greatest show on the earth</h1>
-                    <p>Welcome to the world's greatest show on, the World FIFA Cup.Welcome to Qatar to watch the world's
-                        most popular game World FIFA cup. We are here to serve you</p>
+                    <p>
+                        Welcome to the world's greatest show on, the World FIFA Cup.Welcome to Qatar to watch the world's most popular game World FIFA cup. We are here to serve you
+                    </p>
                         <div class="top_btm">
                             <button class="button">Watch Live&ThinSpace; <i class="fa-solid fa-angle-right"></i>&ThinSpace;<i class="fa-solid fa-video"></i></button>
                         </div>
