--- a/upcomming.html
+++ b/upcomming.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/bbf3357f63.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="stylesheet" href="/style/upcome.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/upcome.css">
     <title>Upcoming Match</title>
 </head>
 
