--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="header_text">
                     <h1>The Greatest show on the earth</h1>
                     <p>
-                        Welcome to the world's greatest show on, the World FIFA Cup.Welcome to Qatar to watch the
+                        Welcome to the world's greatest show on earth, the World FIFA Cup.Welcome to Qatar to watch the
                         world's most popular game World FIFA cup. We are here to serve you
                     </p>
                     <div class="top_btm">
